Add RelyingParty to session.
