# swagger/swagger.yaml
@@ -108,6 +108,7 @@ definitions:
     type: "object"
     required:
     - "accessCode"
+    - "requestingClientId"
     - "sessionId"
     properties:
       sessionId:
@@ -116,6 +117,9 @@ definitions:
       accessCode:
         type: "string"
         description: "The previously provided access code."
+      requestingClientId:
+        type: "string"
+        description: "The clientId of the relying party requesting the id_token."
     description: "A request to retrieve an ID token using an access code."
   SearchRequest:
     type: "object"
